[package]
name = "jawsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boa_ast = "0.20"
boa_parser = "0.20"
walrus = "0.22"
boa_interner = "0.20"
rand = "0.8.5"
tinytemplate = "1.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
tera = "1.20.0"
lazy_static = "1"
tarnik-ast = { git = "https://github.com/drogus/tarnik.git", rev = "f8e707df5022a50c6df98475fc240bf37fa72756" }
tarnik = { git = "https://github.com/drogus/tarnik.git", rev = "f8e707df5022a50c6df98475fc240bf37fa72756" }
wat = "1.221.2"
velcro = "0.5"
